--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,20 +13,20 @@
   }
 }
 
-#homepage-middle {
+.homepage-middle {
   height: 80vh;
   display: flex;
   justify-content: space-around;
   h3 {
     font-weight: 400;
-    font-size: 25px;
     margin-bottom: 50px;
+    font-size: 1.6em;
   }
 }
 
 #homepage-bottom {
+  height: calc(100vh - 100px);
   font-family: Raleway;
-  background: #F4F4F4;
   text-align: center;
   padding-bottom: 100px;
   h1 {
@@ -67,7 +67,7 @@
   margin: 0 50px;
   width: 250px;
   height: 400px;
-  background: #FAFAFA;
+  background: white;
   box-shadow: 0 2px 4px 0 rgba(165, 165, 165, 0.1);
   transition: 0.3s;
   border-radius: 2px;
@@ -90,7 +90,6 @@
 }
 
 .exp:hover {
-  background: white;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 4px 8px 0 rgba(165, 165, 165, 0.3);
   transition: all .7s linear;
 }
