--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,3 +1,10 @@
+#about-us h1 {
+    margin-top: 0;
+    padding: 75px;
+    font-size: 3rem;
+    text-align: center;
+  }
+
 .abitem {
   position:relative;
   width:250px;
