--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,15 +13,22 @@
   }
 }
 
-.homepage-middle {
+#homepage-middle {
+  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');
+  transition: all 5s linear;
   height: 80vh;
   display: flex;
   justify-content: space-around;
   h3 {
     font-weight: 400;
     margin-bottom: 50px;
-    font-size: 1.6em;
+    font-size: 2.5rem;
   }
+}
+
+#homepage-middle:hover {
+  background-image: linear-gradient(-225deg, rgba(0,101,168,0.5) 0%, rgba(0,36,61,0.5) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');
+  transition: all 5s linear;
 }
 
 #homepage-bottom {
@@ -31,9 +38,8 @@
   padding-bottom: 100px;
   h1 {
     margin-top: 0;
-    padding: 50px;
-    font-size: 30px;
-    color: #555;
+    padding: 75px;
+    font-size: 3rem;
   }
 }
 
