--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -3,14 +3,14 @@
   <%= image_tag('logoblack.png', style: 'height:95px;width:auto;') %>
 </div>
 
-<div class="homepage-middle" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');">
+<div id="homepage-middle">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6" style="height: 80vh;">
         <div id="homepage-expl">
           <h3>ShopSpot helps you to find the best place to start your activity. </br></br> Get maps and analytics about people and competition around you.</h3>
           <% if current_user %>
-            <%= link_to "Last search", queries_path, { :class=>"btn btn-primary", :id=>"btn-sign-up" }  %>
+            <%= link_to "Last searches", queries_path, { :class=>"btn btn-primary", :id=>"btn-sign-up" }  %>
           <% else %>
             <%= link_to "Sign up for free", new_user_registration_path, { :class=>"btn btn-primary", :id=>"btn-sign-up" }  %>
             <%= link_to "Already an account ? Log in", new_user_session_path, { :id=>"homesignin" } %>
