--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,13 +5,12 @@
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <div class="abitem">
-          <%= image_tag("https://avatars0.githubusercontent.com/u/32262781?s=460&v=4", style: 'border-radius:3px;' )%>
+          <%= image_tag "christophe.jpg", style: 'border-radius:3px;' %>
           <div class="abinfo">
             <h2>Christophe Gachet</h2>
             <p>
-              Description
             </p>
-            <a href="#" class="btn btn-primary">Linkedin</a>     
+            <a href="#" target="_blank" class="btn btn-primary">Linkedin</a>     
           </div><!-- info -->
         </div>
       </div>
@@ -21,9 +20,8 @@
           <div class="abinfo">
             <h2>Mattia Lamouroux</h2>
             <p>
-              Description
             </p>
-            <a href="#" class="btn btn-primary">Linkedin</a>     
+            <a href="https://www.linkedin.com/in/mattia-lamouroux-641b931a/" class="btn btn-primary" target="_blank">Linkedin</a>     
           </div><!-- info -->
         </div>
       </div>
@@ -33,9 +31,8 @@
           <div class="abinfo">
             <h2>Tiphanie Tourniaire</h2>
             <p>
-              Description
             </p>
-            <a href="#" class="btn btn-primary">Linkedin</a>     
+            <a href="https://www.linkedin.com/in/tiphanie-tourniaire/" class="btn btn-primary" target="_blank">Linkedin</a>     
           </div><!-- info -->
         </div>
       </div>
