--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -109,5 +109,5 @@ h3 {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: image-url("logo.png") center no-repeat #fff;
+  background: image-url("logo.gif") center no-repeat #fff;
 }
