--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -75,7 +75,9 @@ form abbr {
   border-bottom: 0 !important;
 }
 
-
+.caret {
+text-decoration: none;    
+}
 
 .select-wrapper {
   padding-bottom: 1px;
@@ -97,11 +99,12 @@ input.string.required, .numeric.integer.required, .select-wrapper.select.require
   margin-top: 5px;
 }
 
+.caret {
+  border-color: transparent !important;
+}
+
 .select-wrapper span.caret {
   margin-top: 5px;
-  text-decoration: none;
-  border-color: transparent !important;
-  font-size: 2rem;
 }
 
 
