--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -1,6 +1,6 @@
 <div id="homepage-top">
   <h1>The best place for your business</h1>
-  <%= image_tag('logoblack.png', style: 'height:95px;width:auto;') %>
+  <%= image_tag('logoblack.png', style: 'height:95px;width:auto;', id:'logoblack') %>
 </div>
 
 <div id="homepage-middle">
