--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,22 +1,20 @@
 #homepage-top {
   text-align: center;
-  height: 20vh;
+  min-height: 20vh;
   vertical-align: center;
   h1 {
-    font-size: 45px;
-    color: #555;
+    font-size: 4rem;
   }
   h3 {
     font-size: 30px;
     font-weight: 400;
-    color: #555;
   }
 }
 
 #homepage-middle {
   background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');
   transition: all 5s linear;
-  height: 80vh;
+  min-height: 80vh;
   display: flex;
   justify-content: space-around;
   h3 {
@@ -98,4 +96,9 @@
 .exp:hover {
   box-shadow: 0 4px 8px 0 rgba(165, 165, 165, 0.3);
   transition: all .7s linear;
+}
+
+#logoblack:hover, #logoblack:visited {
+    transform: rotate(5deg);
+    transition: 0.5s;
 }
