fix labels in hp form

--- a/app/assets/stylesheets/components/_result-card.scss
+++ b/app/assets/stylesheets/components/_result-card.scss
@@ -29,6 +29,7 @@
 .rctitle {
   line-height: 120%;
   border-bottom: 1px solid #EEE;
+  padding-bottom: 10px;
   h3 {
     margin-top: 10px;
     margin-bottom: 5px;
