--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
-  background: $lightblue;
+  background: $backcards;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 80px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  border-top: 1px solid rgba(165,165,165,0.2)
 }
+
 .footer-links {
   display: flex;
   align-items: center;
