--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -39,3 +39,10 @@
   color: $blue;
   text-decoration: none;
 }
+
+@media screen and (max-width:1000px)
+{
+  .navbar-wagon {
+    display:none;
+  }
+  }
