--- a/app/assets/stylesheets/pages/_queriesindex.scss
+++ b/app/assets/stylesheets/pages/_queriesindex.scss
@@ -5,7 +5,6 @@
   background: $lightblue;
 }
 
-
 #setting-open, #infos-open {
   color: black;
 }
@@ -95,4 +94,30 @@ a:hover, a:focus {
 
 input[type=range] + .thumb {
   background: $blue !important;
+}
+
+@media screen and (max-width:1000px)
+{
+  .indexcontent {
+    flex-direction: column;
+    margin: 0;
+    padding: 5px;
+  }
+  .indexmap {
+    order: 1;
+    width: 100%;
+    position: static;
+  }
+
+  .indexcards {
+    order: 2;
+    width: 100%;
+  }
+
+  #formnewrequest {
+    margin-top: 10px;
+  }
+
+  #map {
+  }
 }
