--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -3,11 +3,9 @@
 
 <div class="indexcontent">
   <div class="indexcards">
-
     <div id="formnewrequest">
       <a href="#" data-toggle="modal" data-target="#myModal">Compare with new address</a><br/>
       <p style="color: #555; font-size: 0.8em;">Or right click on the map</p>
-
     </div>
 
       <% letter = 0
@@ -87,3 +85,5 @@
     </div>
   </div>
 </div>
+
+<%= render 'shared/footer' %>
