--- a/app/assets/stylesheets/components/_mapindex.scss
+++ b/app/assets/stylesheets/components/_mapindex.scss
@@ -70,6 +70,13 @@
   z-index: 10000 !important;
 }
 
+.innercaption {
+  font-size: 1em;
+  font-weight: 400;
+  color: white;
+  text-align:center;
+}
+
 @media screen and (max-width:1000px)
 {
   .map-controls {
