--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -26,7 +26,7 @@
     <div class="rctitle">
       <div class="myflex">
         <%= image_tag(@letter) %>
-        <h3 class="mygrow marg"><%= @query.activity %></h3>
+        <h3 class="mygrow marg"><%= @query.activity.humanize %></h3>
         <% @query.pertinence_grade.times do %>
           <%= image_tag('star_yellow.png', height: '12') %>
         <% end %>
