--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,5 +1,5 @@
 #home-form {
-  background: #F4F4F4;
+  background: $backcards;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(165, 165, 165, 0.1);
 }
@@ -94,7 +94,9 @@ input.string.required, .numeric.integer.required, .select-wrapper.select.require
   border-color: transparent !important;
 }
 
-
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+  background: unset !important;
+}
 
 //=========== SIGN IN
 
