--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,6 +3,6 @@
     <%= link_to "About", about_path %>
   </div>
   <div class="footer-copyright">
-    Shopspot has been made with <i class="fa fa-heart"></i> at Le Wagon Lyon
+    Made with <i class="fa fa-heart"></i>at Le Wagon Lyon
   </div>
 </div>
