--- a/app/assets/stylesheets/pages/_queriesindex.scss
+++ b/app/assets/stylesheets/pages/_queriesindex.scss
@@ -82,6 +82,7 @@
   }
 }
 
+
 a:hover, a:focus {
     text-decoration: none !important;
   }
@@ -112,6 +113,7 @@ input[type=range] + .thumb {
     margin-top: 10px;
   }
 
-  #map {
+  #rightclick {
+    display: none;
   }
 }
