--- a/app/assets/stylesheets/components/_show_card.scss
+++ b/app/assets/stylesheets/components/_show_card.scss
@@ -55,8 +55,8 @@
 
 #linktopdf {
   position: absolute;
-  bottom: 10px;
   right: 20px;
+  top: 0px;
   // border-top: 1px solid rgba(0,0,0,0.3);
   a {
     font-size: 2.2rem;
@@ -86,7 +86,28 @@
     box-shadow: unset !important;
   }
 
-  #linktopdf {
-    bottom: 55px;
+  #screstop, #scresbottom {
+    flex-direction: column;
   }
+  #scpopcatchment {
+    order: 1;
+    width: 100%;
   }
+  #scpopcity {
+    order: 2;
+    width: 100%;
+
+  }
+
+  #sccomp {
+    order: 3;
+    width: 100%;
+
+  }
+
+  #insee {
+    order: 4;
+    width: 100%;
+  }
+
+}
