--- a/app/views/shared/_show_card.html.erb
+++ b/app/views/shared/_show_card.html.erb
@@ -1,7 +1,7 @@
 <div id="scframe">
   <div id="sccontent">
     <div id="sctitle">
-      <h3>Your results</h3>
+      <h3 style="margin-top: 15px;">Your results</h3>
       <p style="color: #307A94; font-weight:600"><%= @query.address %></p>
       <div id="linktopdf">
       <i class="fa fa-download" aria-hidden="true" style="color: #307A94;"></i>
