--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,23 @@ h3 {
   color: #555;
 }
 
+h4 {
+  color: #555;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+h5 {
+  color: #555;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #EEE;
+}
+
 .fa {
   color: #CCC;
   font-size: 2.1rem;
