--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -2,17 +2,29 @@
     width: auto;
 }
 
+.tabsmaller {
+  font-size: 1.5rem;
+}
+
 td {
   border-bottom: 1px solid rgba(165,165,165,0.1);
   padding: 5px !important;
+  text-align: center;
 }
 
 th {
   font-size: 1.8rem;
   font-weight: 600;
   color: $blue;
-  text-align: left;
-  padding: 10px;
+  text-align: center !important;
+}
+
+th .fa {
+  font-size: 2.2rem;
+  margin-right: 0rem;
+  font-weight: 600;
+  color: $blue;
+  text-align: center !important;
 }
 
 .tablecontainer {
@@ -26,6 +38,13 @@ th {
 .tabletitle {
   padding: 20px;
   padding-bottom: 10px;
+  position: relative;
+}
+
+.tableback {
+  position: absolute;
+  top: 27px;
+  left: 37px;
 }
 
 .tablecontent {
