--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,20 +1,22 @@
 <%= render 'shared/navbar' %>
 <div class="tablecontainer">
   <div class="tabletitle">
-    <h1>Nearest Cities</h1>
-    <p>Here are the most suitable cities considering your needs</p>
-    <p><i class="fa fa-undo" aria-hidden="true"></i><%= link_to 'Back', :back %></p></div>
-
+    <h4>Nearest Cities</h4>
+    <h5>Here are the most suitable cities considering your needs</h5>
+    <div class="tableback">
+    <p><i class="fa fa-undo" aria-hidden="true"></i><%= link_to 'Back', :back %></p>
+    </div>
+  </div>
   <div class="tablecontent">
     <table class=".table table-sm table-hover">
       <thead>
         <th></th>
-        <th>Name</th>
+        <th style="text-align: left !important;">Name</th>
         <th>Distance</th>
         <th>Population</th>
         <th>Density</th>
-        <th>Men /</br>Women</th>
-        <th>Age</br>(-25 / 25-64 / +65)</th>
+        <th><i class="fa fa-mars" aria-hidden="true"> - <i class="fa fa-venus" aria-hidden="true"></i></th>
+        <th>Age</br><span class="tabsmaller">(-25 - 25-64 - +65)</span></th>
         <th>Unemployment</th>
         <th>Revenues</th>
       </thead>
@@ -24,12 +26,12 @@
         <tr>
           <% x = x + 1 %>
           <th scope="row"><%= x %></th>
-          <td><%= city[:name] %></td>
+          <td style="text-align: left !important;"><%= city[:name] %></td>
           <td><%= Geocoder::Calculations.distance_between([@query.latitude,@query.longitude], [city[:latitude],city[:longitude]]).round(1) %> km</td>
           <td><%= city[:population] %></td>
           <td><%= (city[:population] / city[:area]).round %></td>
-          <td><%= (city[:sexe][:homme].to_f*100).round%> % / <%= (city[:sexe][:femme].to_f*100).round%> % </td>
-          <td><%= (city[:age][:jeune].to_f*100).round%> % / <%= (city[:age][:adulte].to_f*100).round%> % / <%= (city[:age][:senior].to_f*100).round %> % </td>
+          <td><%= (city[:sexe][:homme].to_f*100).round%> % - <%= (city[:sexe][:femme].to_f*100).round%> % </td>
+          <td><%= (city[:age][:jeune].to_f*100).round%> % - <%= (city[:age][:adulte].to_f*100).round%> % - <%= (city[:age][:senior].to_f*100).round %> % </td>
           <td><%= (city[:chomage] * 100).round %> % </td>
           <td><%= city[:revenu].round %> € </td>
         </tr>
