--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -10,6 +10,7 @@ td {
   border-bottom: 1px solid rgba(165,165,165,0.1);
   padding: 5px !important;
   text-align: center;
+  border-radius: 0;
 }
 
 th {
@@ -17,6 +18,7 @@ th {
   font-weight: 600;
   color: $blue;
   text-align: center !important;
+  border-radius: 0;
 }
 
 th .fa {
@@ -27,29 +29,27 @@ th .fa {
   text-align: center !important;
 }
 
-.tablecontainer {
-  width: 1300px;
-  background:#FDFDFD; 
-  line-height:200%;
-  margin: auto;
-  margin-top: 20px;
-}
-
 .tabletitle {
   padding: 20px;
   padding-bottom: 10px;
   position: relative;
-}
-
-.tableback {
-  position: absolute;
-  top: 27px;
-  left: 37px;
+  background:#FDFDFD; 
+  line-height:200%;
+  margin: 20px 20px 0 20px;
 }
 
 .tablecontent {
   padding: 20px;
+  background:#FDFDFD; 
+  line-height:200%;
+  margin: 0 20px 20px 20px;
 }
+.tableback {
+  position: absolute;
+  top: 27px;
+  left: 250px;
+}
+
 
 thead {
   line-height: 140%;
@@ -63,4 +63,82 @@ tbody {
 
 .table-hover > tbody > tr:hover {
   background-color: $lightblue !important;
+}
+
+.table-hover {
+  vertical-align: top;
+  overflow-x: auto;
+  // optional - looks better for small cell values
+  white-space: nowrap;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+@media screen and (max-width:1000px)
+{
+
+  #tohide {
+    display: none;
+  }
+
+  .br {
+    display: none;
+  }
+
+  .table-hover th,
+  .table-hover td {
+    text-align: left !important;
+    padding: 10px;
+    display: block;
+    height: 50px;  
+  }
+
+  .table-hover tbody th {
+    display: none;
+  }
+
+  .table-hover {
+    display: flex;
+    overflow: hidden;
+    background: none;
+  }
+
+  .table-hover thead {
+    display: flex;
+    flex-shrink: 0;
+    min-width: min-content;
+    border-bottom: none;
+    th {
+      border-right: 1px solid #d0d0d0;
+    }
+  }
+
+  .table-hover tbody {
+    display: flex;
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    td {
+      border-right: 1px solid rgba(165,165,165,0.1);
+
+    }
+  }
+
+  .table-hover tr {
+    display: flex;
+    flex-direction: column;
+    min-width: min-content;
+    flex-shrink: 0;
+  }
+
+  .table-hover td {
+    background-image: none !important;
+    border-left: 0;
+  }
+
+  // border-collapse is no longer active
+  .table-hover th:not(:last-child),
+  .table-hover td:not(:last-child) {
+    border-bottom: 0;
+  }
 }
