--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -4,6 +4,11 @@
 
 .tabsmaller {
   font-size: 1.5rem;
+  margin: 0 5px;
+}
+
+.tables {
+  min-height: calc(100vh - 190px);
 }
 
 td {
@@ -47,7 +52,7 @@ th .fa {
 .tableback {
   position: absolute;
   top: 27px;
-  left: 250px;
+  left: 220px;
 }
 
 
@@ -76,6 +81,16 @@ tbody {
 
 @media screen and (max-width:1000px)
 {
+  .tables {
+  min-height: calc(100vh - 110px);
+} 
+  .tabletitle {
+    margin: 15px 15px 0 15px;
+  }
+
+  .tablecontent {
+    margin: 0 15px 15px 15px;
+  }
 
   #tohide {
     display: none;
@@ -90,7 +105,8 @@ tbody {
     text-align: left !important;
     padding: 10px;
     display: block;
-    height: 50px;  
+    height: 40px;
+    font-size: 1.6rem;
   }
 
   .table-hover tbody th {
