--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,8 +57,6 @@ p, td {
   font-weight: 400;
 }
 
-
-
 a {
   color: #555;
   font-size: 1.8rem;
@@ -89,6 +87,13 @@ h5 {
   font-weight: 400;
   padding-bottom: 20px;
   border-bottom: 1px solid #EEE;
+}
+
+h6 {
+  margin-top: 0;
+  padding: 75px;
+  font-size: 3rem;
+  text-align: center;
 }
 
 .fa {
