--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -18,7 +18,7 @@
   data-radius_catchment_area ="<%= @query.radius_catchment_area %>"
   data-competitors ='<%= @query.competitors_json %>'
   data-icon = '<%= @letter %>'
-  data-icon-market ='<%= @market %>'
+  data-icon-market ='<%= @market %>'>
 
   <div class="rccontent">
     <div class="rctitle">
