--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class="footer">
   <div class="footer-links">
+    <%= link_to "Home", new_query_path %>
     <%= link_to "About", about_path %>
   </div>
   <div class="footer-copyright">
