--- a/app/assets/stylesheets/pages/_pdf.scss
+++ b/app/assets/stylesheets/pages/_pdf.scss
@@ -22,6 +22,10 @@
   margin: 10px 30px;
   box-shadow: 2px 2px 2px 1px rgba(165, 165, 165, 0.1);
   }
+
+  #showleftpdf {
+    width: 300px;
+  }
 }
 // }
 // #showcontent {
@@ -32,7 +36,7 @@
 //   background: $lightblue;
 // }
 
-// #showleft {
+// #showleftpdf {
 //   width: 300px;
 // }
 
