--- a/app/views/queries/pdf.html.erb
+++ b/app/views/queries/pdf.html.erb
@@ -1,6 +1,6 @@
 <body style="background-color: white">
 <div id="showcontentpdf" class="nobreak">
-  <div id="showleft">
+  <div id="showleftpdf">
     <div id="showstreetframepdf">
       <% params = { %>
       <% location: [@query.latitude, @query.longitude].join(","), %>
@@ -24,7 +24,6 @@
         </div>
       </div>
     </div>
-
     <div id="showmapframepdf">
       <% params = {%>
       <% center: [@query.latitude, @query.longitude].join(","),%>
@@ -38,7 +37,6 @@
     </div>
   </div>
   <div id="showcard">
-
     <div id="scframepdf">
       <div id="sccontent">
         <div id="sctitle">
