add mails to about

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
       <div class="abname">
         <h2>Christophe</br> Gachet</h2>
         <div class="ablinks">
-          <a href="https://github.com/crionline38"><i class="fa fa-github"></i></a>
+          <a href="https://github.com/crionline38"><i class="fa fa-github"></i></a><a href="mailto:christophe@shopspot.top"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
@@ -22,7 +22,7 @@
         <h2>Mattia</br> Lamouroux</h2>
         <div class="ablinks">
           <a href="https://github.com/Mayat90"><i class="fa fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/mattia-lamouroux-641b931a/" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/mattia-lamouroux-641b931a/" target="_blank"><i class="fa fa-linkedin"></i></a><a href="mailto:mattia@shopspot.top"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
         <h2>Tiphanie</br> Tourniaire</h2>
         <div class="ablinks">
           <a href="https://github.com/TiphanieTourniaire"><i class="fa fa-github" target="_blank"></i></a>
-          <a href="https://www.linkedin.com/in/tiphanie-tourniaire/" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/tiphanie-tourniaire/" target="_blank"><i class="fa fa-linkedin"></i></a><a href="mailto:tiphanie@shopspot.top"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
