--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,5 +12,5 @@ $light-gray: #F4F4F4;
 $backcards: #FEFEFE;
 
 
-$lightblue: lighten($blue, 57%);
+$lightblue: #eef1f4;
 $mediumblue: lighten($blue, 20%)
